--- a/.vercel/output/static/index.html
+++ b/.vercel/output/static/index.html
@@ -51,10 +51,11 @@
           <path d="M16 16v-3a2 2 0 0 0 -4 0" class="astro-J7PV25F6"></path>
         </a>
       </svg>
-      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-describedby="Twitter" class="astro-J7PV25F6">
-        <title id="twitter">Link to Trevor's Twitter</title>
-        <a href="https://www.twitter.com/boogerbuttcheek/" class="astro-J7PV25F6"></a>
-        <path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z" class="astro-J7PV25F6"></path>
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" aria-describedby="linkedin" class="astro-J7PV25F6">
+        <title id="linkedin">Link to Trevor's LinkedIn</title>
+        <a href="https://www.twitter.com/boogerbuttcheek/" class="astro-J7PV25F6">
+          <path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z" class="astro-J7PV25F6"></path>
+        </a>
       </svg>
     </div>
   </div><hr class="astro-J7PV25F6"><a href="/posts/phished/" rel="prefetch" class="astro-DOHJNAO5" style="--lightGlow: #ff0080;--darkGlow: #0000FF;">
